--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "astro-solid-hn",
+  "name": "astro-svelte-hn",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,9 +9,9 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "@astrojs/solid-js": "^0.1.2",
-    "astro": "^1.0.0-beta.20",
-    "solid-js": "^1.3.14"
+    "@astrojs/svelte": "^1.0.0",
+    "astro": "^1.0.5",
+    "svelte": "^3.49.0"
   },
   "dependencies": {
     "@astrojs/netlify": "^0.3.3"
