--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview"
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "devDependencies": {
+    "@astrojs/netlify": "^1.0.1",
     "@astrojs/svelte": "^1.0.0",
     "astro": "^1.0.5",
-    "svelte": "^3.49.0"
-  },
-  "dependencies": {
-    "@astrojs/netlify": "^0.3.4"
+    "svelte": "^3.46.4"
   }
 }
